apps/django-api-staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: django-api-staging
  labels:
    name: django-api-staging
    managed-by: dev-portal
