apps/django-api-staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-api-staging-service
  namespace: django-api-staging
  labels:
    app: django-api-staging
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: django-api-staging
